<resources>
    <string name="app_name">Othello</string>
    <string name="rules">
        Othello is played on an 8 x 8 non-checkered board with 64 discs which are black on one side and white on the other. One player
        plays discs black side up and the other plays white side up. Place 4 discs in the center of the board; 2 with the black side up
        and 2 with the white side up so that the discs with matching colors touch diagonally. Each player takes 32 discs and chooses one
        colour to use throughout the game. Black places two black discs and White places two white discs. A move consists of "outflanking"
        your opponent\'s disc(s), then flipping the outflanked disc(s) to your colour. To
        outflank means to place a disc on the board so that your opponent\'s row (or rows) of disc(s) is bordered at each end by a disc
        of your colour.
    </string>
    <string name="rules2">
        1. Black always moves first.
    </string>
    <string name="rules3">
        2. If on your turn you cannot outflank and flip at least one opposing disc, your turn is forfeited and your opponent moves again.
        However, if a move is available to you, you may not forfeit your turn.
    </string>
    <string name="rules4">
        3. You may not skip over your own colour disc to outflank an opposing disc.
    </string>
    <string name="rules5">
        4. All discs outflanked in any one move must be flipped, even if it is to the player\'s advantage not to flip them at all.
    </string>
    <string name="rules6">
        5. Discs may only be outflanked as a direct result of a move and must fall in the direct line of the disc placed down.
    </string>
    <string name="rules7">
        6. A player who flips a disc which should not have been turned may correct the mistake as long as the opponent has not made a
        subsequent move. If the opponent has already moved, it is too late to change and the disc(s) remain as is.
    </string>
    <string name="rules8">
        7. Once a disc is placed on a square, it can never be moved to another square later in the game.
    </string>
    <string name="rules9">
        8. If a player runs out of discs, but still has an opportunity to outflank an opposing disc on his or her turn, the opponent must give
        the player a disc to use.
    </string>
    <string name="rules10">
        9. When it is no longer possible for either player to move, the game is over. Discs are counted and the player with the majority of his
        or her colour discs on the board is the winner.
    </string>
    <string name="Rules">       RULES...</string>
    <string name="aboutTheGame">ABOUT THE GAME...</string>
</resources>
