<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aditi.othello.HowToPlayAcitivty"
    android:background="@color/brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_marginLeft="10dp"
            android:text="HOW TO PLAY"
            android:textSize="30dp"
            android:fontFamily="cursive"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/aboutTheGame"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Rules"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules2"
            android:textSize="18dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules3"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules4"
            android:textSize="18dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules5"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules6"
            android:textSize="18dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules7"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules8"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules9"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            tools:layout_editor_absoluteY="129dp"
            tools:layout_editor_absoluteX="158dp"
            android:layout_margin="10dp"
            android:text="@string/rules10"
            android:textSize="18dp"/>

    </LinearLayout>

</ScrollView>
